flex and gapping issue solved

--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ header{
 .my-plan-container{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 .my-plan-container .my-plan-content-title{
     margin: 15px 0px;
@@ -143,6 +145,7 @@ header{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 10px;
     padding: 20px 0px 80px 0px;
 }
 .count-content .counter{
@@ -150,6 +153,8 @@ header{
     border-radius: 10px;
     background-color:#565cac5b;
     padding: 50px 70px;
+    max-width: 200px;
+    max-height: 200px;
 }
 .count-content time{
     font-size: 40px;
@@ -195,7 +200,7 @@ footer{
 }
 footer .footer-container{
     display: flex;
-    gap: 150px;
+    gap: 50px;
 }
 .footer-container .left-footer{
     width: 60%;
